<resources>
    <string name="app_name">LegalTalk</string>
    <string name="username_hint">请输入手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="regist_btn">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="regist">没有账号？立即注册！</string>
    <string name="go_regist_lawyer">律师注册</string>
    <string name="go_regist_normal">用户注册</string>

    <string name="main_tip">精选律师</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
